stylesheets/stylesheet.css
/* ... */
@media screen and (max-width: 42em) {
  .btn {
    display: block;
    width: 100%;
    padding: 0.75rem;
    font-size: 0.9rem; }
    .btn + .btn {
      margin-top: 1rem;
      margin-left: 0; } }

.page-header {
  color: #fff;
  height: 100vh;
  text-align: center;
  background-color: #6BAAFF;
  background-image: linear-gradient(120deg, #926AF9, #926AF9, #6BAAFF); }

@media screen and (min-width: 64em) {
  .page-header {
    padding: 5rem 6rem; } }

@media screen and (min-width: 42em) and (max-width: 64em) {
  .page-header {
    padding: 3rem 4rem; } }

@media screen and (max-width: 42em) {
  .page-header {
    padding: 2rem 1rem; } }

.project-name {
  margin-top: 0;
  margin-bottom: 0.1rem;
  text-align: left; }

@media screen and (min-width: 64em) {
  .project-name {
    font-size: 3.25rem; } }

@media screen and (min-width: 42em) and (max-width: 64em) {
  .project-name {
    font-size: 2.25rem; } }

@media screen and (max-width: 42em) {
  .project-name {
    font-size: 1.75rem; } }

.project-tagline {
  margin-bottom: 2rem;
  font-weight: normal;
  opacity: 0.7;
  text-align: left; }

@media screen and (min-width: 64em) {
  .project-tagline {
    font-size: 1.25rem; } }

@media screen and (min-width: 42em) and (max-width: 64em) {
  .project-tagline {
    font-size: 1.15rem; } }

@media screen and (max-width: 42em) {
  .project-tagline {
    font-size: 1rem; } }

.main-content :first-child {
  margin-top: 0; }
.main-content img {
  max-width: 100%; }
.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-weight: bold;
  color: #926AF9; }
.main-content p {
  margin-bottom: 1em; }
.main-content code {
  padding: 2px 4px;
  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
  font-size: 0.9rem;
  color: #383e41;
  background-color: #f3f6fa;
  border-radius: 0.3rem; }
.main-content pre {
  padding: 0.8rem;
  margin-top: 0;
  margin-bottom: 1rem;
  font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
  color: #567482;
  word-wrap: normal;
  background-color: #f3f6fa;
  border: solid 1px #dce6f0;
  border-radius: 0.3rem; }
  .main-content pre > code {
    padding: 0;
    margin: 0;
    font-size: 0.9rem;
    color: #567482;
    word-break: normal;
    white-space: pre;
    background: transparent;
    border: 0; }
.main-content .highlight {
  margin-bottom: 1rem; }
  .main-content .highlight pre {
    margin-bottom: 0;
    word-break: normal; }
.main-content .highlight pre, .main-content pre {
  padding: 0.8rem;
  overflow: auto;
  font-size: 0.9rem;
  line-height: 1.45;
  border-radius: 0.3rem; }
.main-content pre code, .main-content pre tt {
  display: inline;
  max-width: initial;
  padding: 0;
  margin: 0;
  overflow: initial;
  line-height: inherit;
  word-wrap: normal;
  background-color: transparent;
  border: 0; }
  .main-content pre code:before, .main-content pre code:after, .main-content pre tt:before, .main-content pre tt:after {
    content: normal; }
.main-content ul, .main-content ol {
  margin-top: 0; }
.main-content blockquote {
  padding: 0 1rem;
  margin-left: 0;
  color: #819198;
  border-left: 0.3rem solid #dce6f0; }
  .main-content blockquote > :first-child {
    margin-top: 0; }
  .main-content blockquote > :last-child {
    margin-bottom: 0; }
.main-content table {
  display: block;
  width: 100%;
  overflow: auto;
  word-break: normal;
  word-break: keep-all; }
  .main-content table th {
    font-weight: bold; }
  .main-content table th, .main-content table td {
    padding: 0.5rem 1rem;
    border: 1px solid #e9ebec; }
.main-content dl {
  padding: 0; }
  .main-content dl dt {
    padding: 0;
    margin-top: 1rem;
    font-size: 1rem;
    font-weight: bold; }
  .main-content dl dd {
    padding: 0;
    margin-bottom: 1rem; }
.main-content hr {
  height: 2px;
  padding: 0;
  margin: 1rem 0;
  background-color: #eff0f1;
  border: 0; }

@media screen and (min-width: 64em) {
  .main-content {
    padding: 4rem 26rem 2rem;
    margin: 0 auto;
    position: relative;
    background-color: white;
    font-size: 1.1rem; }

    .card-group {
      visibility: visible;
    }
}

@media screen and (min-width: 42em) and (max-width: 64em) {
  .main-content {
    padding: 2rem 4rem;
    position: relative;
    background-color: white;
    font-size: 1.1rem; } }

@media screen and (max-width: 42em) {
  .main-content {
    padding: 2rem 1rem;
    position: relative;
    background-color: white;
    font-size: 1rem; }

  .card-group {
    visibility: hidden;
  }

  .card-group-mobile {
    visibility: visible;
  }

  .share {
    visibility: hidden;
  }

  .header-content {
    right: inherit;
    width: 89%;
    top: 6%;
  }

  .card-mobile {
    position: absolute;
    top: 224px;
    display: block;
    margin-left: auto;
    position: relative;
    margin-right: auto;

    -moz-animation-name: transitionCard-3;
    -moz-animation-iteration-count: 1;
    -moz-animation-timing-function: ease-in;
    -moz-animation-duration: 0.75s;

    -webkit-animation-name: transitionCard-3;
    -webkit-animation-iteration-count: 1;
    -webkit-animation-timing-function: ease-in;
    -webkit-animation-duration: 0.75s;

    animation-name: transitionCard-3;
    animation-iteration-count: 1;
    animation-timing-function: ease-in;
    animation-duration: 0.75s;
  }

}

    @media screen and (min-width: 64em) {
      .footer-content {
        padding: 0rem 6rem 2rem;
        margin: 0 auto;
        position: relative;
        background-color: white;
        font-size: 1.1rem; }

      .card-mobile {
          visibility: hidden;
      }

      }

    @media screen and (min-width: 42em) and (max-width: 64em) {
      .footer-content {
        padding: 2rem 4rem;
        position: relative;
        background-color: white;
        font-size: 1.1rem; }

      .card-mobile {
        visibility: hidden;
      }
      }
/* ... */

